Link to next question within/across modules on finish
When we loop through questions to generate project progress list,
we also capture the next question after the current question.
The calculate for within a module and also across modules because
our question list is calculated at the project level.

--- a/templates/focus-area-styles.css
+++ b/templates/focus-area-styles.css
@@ -7,7 +7,6 @@ body {
 #focus-area-wrapper {
   border-radius: 10px;
   border-bottom: 1px solid rgb(204, 204, 204);
-  padding: 2em;
-  padding-bottom: 3em;
+  padding: 2em 2em 3em 2em;
   background-color: white;
 }
