--- a/templates/task-progress-project-list.html
+++ b/templates/task-progress-project-list.html
@@ -25,7 +25,7 @@
             <li>&nbsp;</li>
             </div>
             <li>
-              ...and we&rsquo;re done
+              <a href="{{task.get_absolute_url}}/finished">...and we&rsquo;re done</a>
             </li>
           {% endif %}
           </ul>
