--- a/templates/portfolios/detail.html
+++ b/templates/portfolios/detail.html
@@ -97,12 +97,23 @@ Remove contextbar from top of page
 
       <div id="portfolio-members" class="container">
         <div class="row" style="margin-top: 60px;">
+          <p id="portfolio-members"></p>
           <p> <b>Users With Access:</b></p>
           {% for user in users_with_perms %}
           <div id="portfolio-member-{{user.name}}">
           <p class="inline"> {{user.name}}
             {% if user.owner %}
             (Owner)
+            {% if can_invite_to_portfolio and request.user.id != user.id %}
+            <form id="{{user.name}}_remove_permissions" name="assign_owner_permissions" method="post" action="{% url 'update_permissions' %}" class="inline">
+                {% csrf_token %}
+                <input type="hidden" id="portfolio_id" name="portfolio_id" value={{portfolio.id}}>
+                <input type="hidden" id="user_id" name="user_id" value={{user.id}}>
+                <input type="hidden" id="permission" name="permission" value="remove_owner_permissions">
+                <input type="hidden" name="next" value="{{ request.path }}">
+                <input type="submit" value="Remove Ownership" class="btn btn-sm btn-danger" />
+            </form>
+            {%endif%}
           </p>
           {% elif can_invite_to_portfolio %}
           <form id="{{user.name}}_remove_permissions" name="assign_owner_permissions" method="post" action="{% url 'update_permissions' %}" class="inline">
@@ -137,12 +148,12 @@ Remove contextbar from top of page
         function invite_user_into_portfolio() {
           var info = project_invitation_info;
           show_invite_modal(
-            'Invite To A Portfolio (' + info.portfolio_title + ')',
+            'Invite To A Portfolio (' + info.model_title + ')',
             'Give a colleague access to this portfolio.',
             info,
-            'You have been granted access to the portfolio ' + info.portfolio_title + '.',
+            'You have been granted access to the portfolio ' + info.model_title + '.',
             {
-              portfolio: info.portfolio_id,
+              portfolio: info.model_id,
             },
             function () { window.location.reload() }
           );
