Properly hide spacer column in task, question
Using `xs-hidden` now for bootstrap 3 to
properly hide spare column on small screens.

Fixes issue that user could not click on Continue
button (or anything else) when page width smaller than
large.

--- a/templates/task-base.orig.html
+++ b/templates/task-base.orig.html
@@ -96,7 +96,7 @@
     </li> -->
 
     <!-- <div class="row">
-      <div class="col-spacer col-xs-0 col-sm-0 col-md-0 col-lg-1">
+      <div class="col-spacer xs-hidden sm-hidden md-hidden col-lg-1">
         &nbsp;
       </div>
 
@@ -108,18 +108,17 @@
         {{task.title}}
       </div>
 
-        <div class="col-spacer col-xs-0 col-sm-0 col-md-0 col-lg-1">
+        <div class="col-spacer xs-hidden sm-hidden col-md-0 col-lg-1">
         &nbsp;
       </div>
 
-      <div id="context-area-wrapper" class="col-xs-0 col-sm-2 col-md-3 col-lg-3">
+      <div id="context-area-wrapper" class="xs-hidden col-sm-2 col-md-3 col-lg-3">
           {% if is_admin %}
           <div class="pull-right hidden-xs">
             <a href="#" onclick="return delete_task();"><span class="glyphicon glyphicon-trash" style="color: #BBB;"></span></a>
           </div>
           {% endif %}
       </div> -->
-
 
   <!--   {% if is_admin %}
     <div class="pull-right hidden-xs">
