--- a/templates/question.html
+++ b/templates/question.html
@@ -131,10 +131,10 @@ label:hover .onhover { display: inline; }
 
 {{block.super}}
 
-<!-- <div class="row"> -->
+<div class="row">
 
   <!--
-  <div class="col-spacer col-xs-0 col-sm-0 col-md-0 col-lg-1">
+  <div class="col-spacer hidden-xs hidden-sm hidden-md col-lg-1">
     &nbsp;
   </div>
   -->
@@ -560,17 +560,17 @@ label:hover .onhover { display: inline; }
     </div>
   </div> <!-- /focus-area-wrapper -->
 
-  <div class="col-spacer col-xs-hidden col-sm-1 col-md-1 col-lg-3 col-xl-2">
+  <div class="col-spacer hidden-xs col-sm-1 col-md-1 col-lg-3 col-xl-2">
     &nbsp;
   </div>
 
-  <div id="progress-project-area-wrapper" class="col-xs-0 col-sm-2 col-md-3 col-lg-3 col-xl-2"
+  <div id="progress-project-area-wrapper" class="col-xs-8 col-sm-6 col-md-3 col-lg-3 col-xl-2"
        style="background-color: rgb(230, 230, 230); border-radius: 6px;">
     {% include "task-progress-project-list.html" with previous="question" %}
   </div>
 
   </div>
-<!--</div> /row -->
+</div> <!-- /row -->
 
 {% if authoring_tool_enabled %}
 {# should be in body so that it comes before the global error modal so that ajax errors show on top of this #}
