Change next question nav to linear progression
Instead of computing the next unanswered question
we instead get the next question sorted list of questions
for the module, enabling the user to progress linear from
anywhere within the list of questions.

This is friendlier to users, allowing them to jump
forward and backward in the question list.

We preserve the calculation of the next unanswered
question method because that might be useful. We just grab
the next index in the question list from the current question
and check to make sure we are not exceeding the length of
the question list

Bump version to v0.9.0.dev38+devel

--- a/templates/question.html
+++ b/templates/question.html
@@ -160,6 +160,7 @@ label:hover .onhover { display: inline; }
     <div id="question">
         <form {% if not write_priv %}class="disabled"{% endif %} autocomplete="off">
             <input type="hidden" name="question" value="{{q.id}}">
+            <input type="hidden" name="next_linear_question" value="{{next_linear_question.link}}">
             <input type="hidden" name="method" value="save">
             <input type="hidden" name="skipped_reason" value="">
             <input type="hidden" name="unsure" value="">
