start a project button now opens up select portfolio pop up

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -159,7 +159,7 @@ Your Compliance Projects
           <div class="glyphicon glyphicon glyphicon-list-alt"></div>
         </div>
         <div class="col-md-9">
-          <h3><a href="/store">Start a project</a></h3>
+          <h3><a id="new-project" onclick="show_select_portfolio_modal(); return false;" href="#"">Start a project</a></h3>
           <p>Projects are your organization's questionnaires, assessments and guides needed for authorizations.
           </p>
         </div>
