--- a/templates/task-progress-question-list.html
+++ b/templates/task-progress-question-list.html
@@ -7,7 +7,7 @@
       style="margin:0px;
              border-top:0.5px dotted #ddd;
              font-size: 1.0em; padding: 2px 0px 0px 3px; text-overflow: ellipsis;
-             background-color: {% if q.is_this_question %}
+             background-color: {% if q.is_this_question %}rgb(240, 255, 240);
                                {% elif q.skipped %}rgb(241, 220, 219);
                                {% elif q.answered %}rgb(198, 223, 181);
                                {% endif %}
