--- a/templates/settings.html
+++ b/templates/settings.html
@@ -15,6 +15,8 @@ GovReady-Q Setup
   <p class="small">You are a Django Administrator. You have extra permissions on this page and can visit the <a href="{{django_admin_url}}">Django Admin homepage</a>.</p>
   {% endif %}
 
+  {% include "permissions.html" with users=users portfolios=portfolios projects=projects %}
+
   {% if can_edit_org_settings %}
   <h2 style="margin-top: 2em;">Organization Administrators</h2>
 
