--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,6 +25,24 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+
+        {% if request.user.is_authenticated %}
+        <!-- Create new projects, portfolios -->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="create-menu-dropdown">
+              <span class="glyphicon glyphicon-plus"></span>
+            </a>
+            <ul class="dropdown-menu" style="width: 300px;">
+              <li><a href="#" id="" onclick="show_select_portfolio_modal(); return false;">Start a new project&hellip;</a></li>
+              <li class="dropdown-item-text small text-muted" style="margin: 0px 12px 8px 20px;">Begin a project from the assessment library. You will be able to choose any available assessment.
+              </li>
+              <li><a href="/portfolios/new" id="">Create a portfolio&hellip;</a></li>
+              <li class="dropdown-item-text small text-muted" style="margin: 0px 12px 8px 20px;">Portfolios allow you to organize and manage related projects. Members of a portfolio can access all of its unrestricted projects.
+              </li>
+            </ul>
+          </li>
+        {% endif %}
+
         {% if user.is_staff %}
           <li><a href="{% url "guidedmodules_analytics" %}"><span class="glyphicon glyphicon-dashboard" aria-label="Analytics" tooltip="Analytics"></span></a></li>
         {% endif %}
