Add message, styling to authors why seeing imputed question
Users with authoring tool enbabled will see all
questions displayed as they navigate, even imputed questions.
This can be confusing to the user that an imputed question
appears. So we add a better message to remind the user
with Authoring Tool privilege enabled that they are seeing the
question for that reason.

Also bump VERSIOn and update CHANGELOG.

--- a/templates/question.html
+++ b/templates/question.html
@@ -459,7 +459,10 @@ label:hover .onhover { display: inline; }
             {% endif %}
 
             {% if not is_answerable %}
-                <p class="text-danger">This question cannot currently be answered or skipped because its value is currently being imputed or it is dependent on questions that have not yet been answered.</p>
+              <p class="text-danger">This question cannot currently be answered or skipped because its value is currently being imputed or it is dependent on questions that have not yet been answered.</p>
+              {% if authoring_tool_enabled %}
+                <p class="text-danger">You are seeing this question because the Authoring Tools are enabled. Ordinary users would not see this question displayed.</p>
+              {% endif %}
 
             {% elif write_priv %}
 
