--- a/templates/task-progress-question-list.html
+++ b/templates/task-progress-question-list.html
@@ -1,5 +1,5 @@
 {% for q in context %}
-{% if not q.imputed %}
+{% if not q.imputed or authoring_tool_enabled %}
   <li id="link-to-question-{{q.key}}" 
       class="truncate
              {% if q.is_this_question %}this{% else %}other{% endif %}
@@ -9,19 +9,20 @@
              font-size: 1.0em; padding: 2px 0px 0px 3px; text-overflow: ellipsis;
              background-color: {% if q.is_this_question %}rgb(240, 255, 240);
                                {% elif q.skipped %}rgb(241, 220, 219);
-                               {% elif q.answered %}rgb(198, 223, 181);
+                               {% elif q.answered or q.imputed %}rgb(198, 223, 181);
                                {% endif %}
             ">
     {% if not q.is_this_question %}<a href="{{q.link}}?previous={{previous|urlencode}}">{% endif %}
 
     {% if q.is_this_question  %}<span class="glyphicon glyphicon-play-circle"> </span>
-    {% elif q.skipped %}<span class="glyphicon glyphicon-edit"> </span>
-    {% elif q.answered %}<span class="glyphicon glyphicon-check"> </span>
+    {% elif q.skipped %}<span class="glyphicon glyphicon-pushpin"> </span>
+    {% elif q.answered or q.imputed %}<span class="glyphicon glyphicon-check"> </span>
     {% else %}<span class="glyphicon glyphicon-unchecked"> </span>{% endif %}
 
     {{q.title}}
 
     {% if not q.is_this_question %}</a>{% endif %}
+    {% if q.imputed %}<span class="glyphicon glyphicon-retweet pull-right"> </span>{% endif %}
   </li>
 {% endif %}
 {% endfor %}
