--- a/templates/portfolios/portfolios_table.html
+++ b/templates/portfolios/portfolios_table.html
@@ -1,19 +1,26 @@
 <!-- List of portfolios -->
 {% load humanize %}
+{% load guardian_tags %}
 
 <div class="container">
 
   {% for portfolio in portfolios %}
   <div class="row" style="border-top: 1px solid #aaa;padding: 8px 0px 8px 0px;">
 
-    <div class="col-md-5">
+    <div class="col-md-4">
       <div>
         <span class="glyphicon glyphicon-folder-close"></span>&nbsp;&nbsp;&nbsp;
         <a href="/portfolios/{{portfolio.id}}/projects" id="portfolio_{{portfolio.title}}" style="color: black;">{{portfolio.title}}</a>
       </div>
     </div>
 
-    <div class="col-md-4">&nbsp;</div>
+    {% get_obj_perms request.user for portfolio as "perms" %}
+    {% if "can_grant_portfolio_owner_permission" in perms %}
+    <div class="col-md-2"><small style="color: #888;">Role: Owner</small></div>
+    {% elif "change_portfolio" in perms%}
+    <div class="col-md-2"><small style="color: #888;">Role: Can Edit</small></div>
+    {% endif %}
+    <div class="col-md-2">&nbsp;</div>
     <div class="col-md-1"><small style="color: #888;">ID: {{portfolio.id}}</small></div>
 
     <div class="col-md-2" style="text-align: right;"><small style="color: #888;">Created
