--- a/templates/permissions_list.html
+++ b/templates/permissions_list.html
@@ -8,6 +8,7 @@
 
 <h3><strong>Projects</strong></h3>
 <p>Users have the following permissions in Projects:</p>
+<li>Project Membership (old)</li>
 {% for perm in project_permissions %}
 <li>{{perm.name}}</li>
 {% endfor %}
