Remove legacy Organization from discussion invites, turn off discussion polling
Non-super users were not able to submit discussion comments
because the invitations being sent upon comment add still included
legacy organization reference. Invitations no longer have Organizations
in model after the removal of multi-tenant sub domains.

Removing the reference to organizations solved the issue with users
not being able to add comments.

We won't need organizations on discussion in future either, because
discussions will be tied to projects (or tasks) that still have
organization structure built-in.

Also turned of javascript initiation of polling for updates on
discussions in order to remove that noise from log. Polling was
a cheap way to check.

--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -441,11 +441,13 @@ function display_discussion(discussion, is_page_load) {
     // options
   });
 
-  // start polling the server for new events
+  // start poor-man's polling the server for new events
   // don't poll if the user can't comment because the discussion view
   // will say they don't have permission to poll
+  /* Temporarily stop our polling to make logs quieter
   if (discussion_info.can_comment)
-    discussion_poll();
+     discussion_poll();
+  */
 }
 
 function render_events(discussion, initial) {
