--- a/templates/settings_usertable.html
+++ b/templates/settings_usertable.html
@@ -40,6 +40,6 @@
 {% endif %}
 
 <p>
-  <input id="{{listid}}-select-user" type="text" class="form-control" style="width: 20em; display: inline-block; height: 30px" placeholder="name, username, or email">
+  <input id="{{listid}}-select-user" type="text" class="form-control" style="width: 20em; display: inline-block; height: 30px" placeholder="">
   <button id="{{listid}}-select-user-submit" class="btn btn-primary btn-sm" disabled onclick="org_user_list_add(this)"><span class="glyphicon glyphicon-plus"></span> Add User to {{listname}}</button>
 </p>
