--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,6 +18,8 @@
     <div id="navbar-collapse-target" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-left" style="color: white;">
         {% if request.user.is_authenticated %}
+          <li><a href="/itsystems" id="menu-itsystems">IT Systems</a></li>
+          <li>&nbsp;&nbsp;&nbsp;&nbsp;</li>
           <li><a href="/projects" id="menu-projects">Projects</a></li>
           <li>&nbsp;&nbsp;&nbsp;&nbsp;</li>
           <li><a href="/portfolios" id="menu-portfolios">Portfolios</a></li>
