--- a/templates/itsystems/form.html
+++ b/templates/itsystems/form.html
@@ -10,8 +10,8 @@ Welcome to Compliance Automation
 <div class="container">
     <div class="row">
         <div class="col-md-3" style="margin: 40px 0px 30px 0px;">
-            <h2>New IT Systems</h2>
-            <p>IT SYSTEMS FLAVOR TEXT.</p>
+            <h2>New IT System</h2>
+            <p>An IT system is a collection of computing and/or communications components that support the functional objectives of an organization. An IT system may consist of one or more computers and their related resources of any size. The resources that comprise a system do not have to be physically connected.</p>
         </div>
 
         <div class="col-md-9" style="margin: 40px 0px 30px 0px;">
