Link 'Create an IT System' button to form

--- a/templates/itsystems/index.html
+++ b/templates/itsystems/index.html
@@ -17,7 +17,7 @@ Your IT Systems
 <div style="margin-top: 30px">
   <div class="container">
     <div style="float: right; margin: 0 0.5em 0em 5em;">
-      <a id="new-itsystem" href="/itsystem/new" class="btn btn-success">Create an IT System</a>
+      <a id="new-itsystem" href="new" class="btn btn-success">Create an IT System</a>
     </div>
 
     <h2 class="">IT Systems</h2>
