--- a/templates/itsystems/hostinstance_form.html
+++ b/templates/itsystems/hostinstance_form.html
@@ -10,8 +10,8 @@ Welcome to Compliance Automation
 <div class="container">
     <div class="row">
         <div class="col-md-3" style="margin: 40px 0px 30px 0px;">
-            <h2>New Host System</h2>
-            <p>HOST SYSTEM FLAVOR TEXT</p>
+            <h2>New Host Instance</h2>
+            <p>A host instance is any identifiable physical or virtual compute instance such as a server, computer, or network device that is part of your IT System boundary.</p>
         </div>
 
         <div class="col-md-9" style="margin: 40px 0px 30px 0px;">
