MVP retrieving data from Wazuh ServiceAgent

--- a/templates/itsystems/systeminstance_hostinstances_table.html
+++ b/templates/itsystems/systeminstance_hostinstances_table.html
@@ -19,7 +19,7 @@
     <div class="col-xs-10 col-md-5">
       <div>
         <span class="glyphicon glyphicon-hdd"></span>&nbsp;&nbsp;&nbsp;
-        <a href="/itsystems/host/{{hostinstance.id}}" id="hostinstance_{{hostinstance.name}}" style="color: black;">{{hostinstance.name}}</a>
+        <a href="/itsystems/hosts/{{hostinstance.id}}" id="hostinstance_{{hostinstance.name}}" style="color: black;">{{hostinstance.name}}</a>
       </div>
     </div>
 
