--- a/templates/itsystems/hostinstance.html
+++ b/templates/itsystems/hostinstance.html
@@ -16,13 +16,14 @@
 
 <div style="margin-top: 30px">
   <div class="container">
-    <!-- <div style="float: right; margin: 0 0.5em 0em 5em;">
-      <a id="new-itsystem" href="/itsystem/new" class="btn btn-success">Create an IT System</a>
-    </div> -->
+    <div style="float: right; margin: 0 0.5em 0em 5em;">
+      <a id="new-host" href="hosts/new" class="btn btn-success">Create a Host</a>
+    </div>
 
     <h2 class="">{{ hostinstance.system_instance.name }} / {{hostinstance.name}}</h2>
 
-    <p>detail page</p>
     <p><a href="http://35.175.122.207:5601/app/wazuh#/agents?_g=()&agent={{agent.agent_id}}&_a=(columns:!(_source),index:'wazuh-alerts-3.x-*',interval:auto,query:(language:kuery,query:''),sort:!(timestamp,desc))&tab=welcome">view agent details</a> ({{agent.agent_id}})</p>
 
+    <h3>Data from {{ hostinstance.name }}</h3>
+    <p><pre>{{agent_service_data_pretty}}</pre></p>
     {% endblock %}
