Fix small bug in referencing itsystem forms

--- a/templates/itsystems/hostinstance.html
+++ b/templates/itsystems/hostinstance.html
@@ -17,7 +17,7 @@
 <div style="margin-top: 30px">
   <div class="container">
     <div style="float: right; margin: 0 0.5em 0em 5em;">
-      <a id="new-host" href="hosts/new" class="btn btn-success">Create a Host</a>
+      <a id="new-host" href="/itsystems/hosts/new" class="btn btn-success">Create a Host</a>
     </div>
 
     <h2 class="">{{ hostinstance.system_instance.name }} / {{hostinstance.name}}</h2>
