--- a/templates/itsystems/systeminstance_hostinstances.html
+++ b/templates/itsystems/systeminstance_hostinstances.html
@@ -17,7 +17,7 @@
 <div style="margin-top: 30px">
   <div class="container">
     <div style="float: right; margin: 0 0.5em 0em 5em;">
-      <a id="new-itsystem-host" href="/itsystem/host/new" class="btn btn-success">Add a Host</a>
+      <a id="new-itsystem-host" href="/itsystems/hosts/new" class="btn btn-success">Add a Host</a>
     </div>
 
     <h2 class="">{{ systeminstance.name }} / Hosts</h2>
