Added USDA navbar logo, adjusted image margins

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,8 +10,8 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/" style="color: #EEE; font-weight: bold;">
-          <img alt="GovReady Q logo" src="{% static "img/brand/navbar-logo.png" %}"
-          width="110px;" style="margin: -2px 20px;">
+          <img alt="USDA Logo" src="{% static "img/brand/USDA-navbar-logo.png" %}"
+          width="70px;" style="margin: -23px 20px;">
       </a>
     </div>
 
