--- a/templates/projects_lifecycle_original.html
+++ b/templates/projects_lifecycle_original.html
@@ -106,7 +106,7 @@ h1.mini {
 
 {% if lifecycles|length == 0 %}
 <div class="container">
-  <h2>Welcome to GovReady-Q</h2>
+  <h2>Welcome to GovReady</h2>
 
   <p>Assess, test, and authorize together</p>
 </div>
