--- a/templates/projects.html
+++ b/templates/projects.html
@@ -218,8 +218,8 @@ Your Compliance Projects
           <div class="glyphicon glyphicon-duplicate"></div>
         </div>
         <div class="col-md-9">
-          <h3><a href="https://govready-q.readthedocs.org">Learn more about GovReady-Q</a></h3>
-          <p>Checkout our documentation to learn how to take full advantage of GovReady-Q.
+          <h3><a href="https://govready-q.readthedocs.org">Learn more about GovReady</a></h3>
+          <p>Checkout our documentation to learn how to take full advantage of GovReady.
           </p>
         </div>
       </div>
