Added back the Qs in GovReady-Q on the front page

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -111,7 +111,7 @@ Your Compliance Projects
 {% if projects|length > 0 %}
 <h2 class="">Projects</h2>
 {% else %}
-<h2>Welcome to GovReady</h2>
+<h2>Welcome to GovReady-Q</h2>
 
 <p>Assess, test, and authorize together</p>
 {% endif %}
@@ -218,8 +218,8 @@ Your Compliance Projects
           <div class="glyphicon glyphicon-duplicate"></div>
         </div>
         <div class="col-md-9">
-          <h3><a href="https://govready-q.readthedocs.org">Learn more about GovReady</a></h3>
-          <p>Checkout our documentation to learn how to take full advantage of GovReady.
+          <h3><a href="https://govready-q.readthedocs.org">Learn more about GovReady-Q</a></h3>
+          <p>Checkout our documentation to learn how to take full advantage of GovReady-Q.
           </p>
         </div>
       </div>
